# nhl-arenas

./: .env.example  .gitignore  DOCKER_QUICKSTART.md  ENV_SETUP.md  LICENSE  README.md  docker-compose.yml  render.yaml
.github/: dependabot.yml
.github/workflows/: backend-cd.yml  backend-ci.yml  frontend-cd.yml  frontend-ci.yml  frontend-ios-release.yml  weekly-smoke-test.yml
backend/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  start.sh
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 420c650723d1_add_unique_constraint_to_team_model_.py  4fb3618a1f7a_add_arena_team_visit_image_models_py.py  98fedb47ae77_add_arena_team_visit_image_models.py  d7ecb412a981_add_users_table.py
backend/app/: exceptions.py  main.py
backend/app/core/: auth.py  config.py  error_handlers.py  exceptions.py  firebase.py
backend/app/data/: arenas.json
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  arena.py  image.py  team.py  user.py  visit.py
backend/app/routers/: __init__.py  auth.py  example_protected.py  health.py  reference.py  visits.py
backend/app/schemas/: __init__.py  auth.py  game.py  reference.py  stats.py  visit.py
backend/app/scripts/: __init__.py  seed_reference_data.py
backend/app/services/: auth_errors.py  firebase_login.py  nhl_api_service.py  nhl_game_lookup.py  team_logo.py  user_service.py  visits.py
backend/tests/: conftest.py
backend/tests/routers/: test_auth_router.py  test_reference_router.py  test_visits_router.py
backend/tests/services/: test_nhl_game_lookup.py  test_visit_stats.py  test_visits_service.py
backend/tests/smoke/: __init__.py  keepalive.py  runner.py  test_api_smoke.py  test_keepalive.py
frontend/: .env.example  .eslintrc.js  .gitignore  AGENTS.md  App.tsx  README.md  app.json  components.json  eas.json  metro.config.js  package-lock.json  package.json  svg.d.ts  tailwind.config.js  tsconfig.json
frontend/public/: _redirects
frontend/src/: App.tsx  global.css
frontend/src/app/: +html.tsx  +not-found.tsx  _layout.tsx  oauthredirect.tsx
frontend/src/components/: AddVisitButton.tsx  AuthDivider.tsx  AuthScreenShell.tsx  BackButton.tsx  DatePickerField.tsx  DeleteVisitConfirmation.tsx  EditVisitSeatingSheet.tsx  FormTextField.tsx  GoogleIcon.tsx  GoogleSignInButton.tsx  LatestVisitCard.tsx  MatchupScoreboard.tsx  MatchupScoreboardHalf.tsx  NHLBrand.tsx  PageLoadingIndicator.tsx  ScoreBug.tsx  ScreenHeader.tsx  (+4 more)
(+35 files in other folders)
