[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nhl-arenas-backend"
version = "0.1.0"
description = "FastAPI backend for the NHL Arenas app"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
    "sqlalchemy[asyncio]==2.0.50",
    "greenlet==3.5.1",
    "alembic==1.18.4",
    "psycopg[binary,pool]==3.3.4",
    "python-dotenv==1.2.2",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "email-validator>=2.3.0",
    "firebase-admin==7.4.0",
    "httpx==0.28.1",
    "nhl-api-py>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
