[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nhl-arenas-backend"
version = "0.1.0"
description = "FastAPI backend for the NHL Arenas app"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.139.2",
    "uvicorn[standard]==0.51.0",
    "sqlalchemy[asyncio]==2.0.51",
    "greenlet==3.5.3",
    "alembic==1.18.5",
    "psycopg[binary,pool]==3.3.4",
    "python-dotenv==1.2.2",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "email-validator>=2.3.0",
    "firebase-admin==7.5.0",
    "httpx==0.28.1",
    "nhl-api-py>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
